everything seems to be working but the fill down

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>D'Ann Hart Portfolio</title>
+	<title>D'Ann Hart Portfolio - Contact Me</title>
 	<link href="assets/css/reset.css" type="text/css" rel="stylesheet">
 	<link href="assets/css/portfolio.css" type="text/css" rel="stylesheet">
 </head>
@@ -30,11 +30,16 @@
 	<!-- Left section of content - the main purpose of the page -->
 		<div class="pagecontent">
 			<div>
-				<h2>Page Title</h2>
+				<h2>Contact Me</h2>
 			</div>
 			<hr />
 			<div>
-			 <!--main content-->
+				<form action="" method="post">
+	  				<label for="name">Name</label><br />
+						<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+					<label for="email">Email</label><br />
+						<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+				</form>
 			</div>
 
 
