--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>D'Ann Hart Portfolio</title>
+	<title>D'Ann Hart Portfolio - My Projects</title>
 	<link href="assets/css/reset.css" type="text/css" rel="stylesheet">
 	<link href="assets/css/portfolio.css" type="text/css" rel="stylesheet">
 </head>
