--- a/index_headerdiv.html
+++ b/index_headerdiv.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<title>D'Ann Hart Portfolio - About Me</title>
 	<link href="assets/css/reset.css" type="text/css" rel="stylesheet">
-	<link href="assets/css/portfolio.css" type="text/css" rel="stylesheet">
+	<link href="assets/css/portfolio_headerdiv.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <div class="wrapper">
   	<!--Top header and navigation menu -->
-  	<div class="headercontainer"> <!--full width div -->
+  	<div class="headercontainer">
  	<div  id="header">
 		<div class="nameplate">
 			<h1>D'Ann Hart</h1>
@@ -23,7 +23,7 @@
 			</ul>
 		</div>
 	</div>	<!-- End header div -->
-	</div> <!-- end headercontainer -->
+	</div>
 	<!-- End header section -->
 
 	<!-- Main content area -->
