--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,13 @@
 </head>
   <body>
   <div class="wrapper">
-  	<!--Top header and navigation menu -->
+<!--Top header and navigation menu -->
+  	<div class="headercontainer"> <!--full width div -->
  	<div  id="header">
 		<div class="nameplate">
 			<h1>D'Ann Hart</h1>
 		</div>
-<!--Top navigation menu -->
+	<!--Top navigation menu -->
 		<div id="topmenu">
 			<ul class="nav">
 				<li><a href="index.html">About</a></li>
@@ -22,7 +23,8 @@
 			</ul>
 		</div>
 	</div>	<!-- End header div -->
-<!-- End header section -->
+	</div> <!-- end headercontainer -->
+	<!-- End header section -->
 
 <!-- Main content area -->
 <div id="middlesection">
@@ -30,28 +32,64 @@
 	<!-- Left section of content - the main purpose of the page -->
 		<div class="pagecontent">
 			<div>
-				<h2>Page Title</h2>
+				<h2>Portfolio</h2>
 			</div>
-			<hr />
-			<div>
+		
 			 <!--main content-->
-			</div>
+			 <div class="profile">
+
+				<div class="project hangman">
+					<div class="projectname">
+						<h4>Hangman</h4>
+					</div>
+				</div>
+
+				<div class="project rpggame">
+					<div class="projectname">
+						<h4>RPG Game</h4>
+					</div>
+				</div>
+
+				<div class="project trivia">
+					<div class="projectname">
+						<h4>Trivia Game</h4>
+					</div>
+				</div>
+
+				<div class="project news">
+					<div class="projectname">
+						<h4>Rutgers Info Widget</h4>
+					</div>
+				</div>
+
+				<div class="project rock">
+					<div class="projectname">
+						<h4>Rock Paper Scissors</h4>
+					</div>
+				</div>
 
 
+
+
+
+
+
+			
+			
+
+			</div> <!--end profile div -->
 		</div> <!-- end pagecontent -->
 	<!--Social and Professional links block -->
 		<div class="sociallinks">
 		
 				<h3>Connect with Me</h3>
 			
-			<hr>
-			<div class="centered">
 				<ul class="socialmenu">
 					<li><a href="https://github.com/dnhart" class="github" alt="GitHub">GitHub</a></li>
 	  				<li><a href="https://www.linkedin.com/in/dnhart" class="linkedin" alt="LinkedIn">LinkedIn</a></li>
 	  				<li><a href="http://stackexchange.com/users/9287023/dann-hart" class="stack" alt="Stack Overflow">Stack Overflow</a></li>
 				</ul>
-			</div><!-- End centered -->
+			
 		</div>	<!--End Social Links Section -->
 	</div><!-- End contentcontainer -->
 </div><!-- End Middle Section -->
