added portfolio links and adjusted profile div

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,45 +37,47 @@
 		
 			 <!--main content-->
 			 <div class="profile">
-
-				<div class="project hangman">
-					<div class="projectname">
-						<h4>Hangman</h4>
+				
+				<a href="#">	
+					<div class="project hangman">
+						<div class="projectname">
+							<h4>Hangman</h4>
+						</div>
 					</div>
-				</div>
-
-				<div class="project rpggame">
-					<div class="projectname">
-						<h4>RPG Game</h4>
+				</a>
+				
+				<a href="#">	
+					<div class="project rpggame">
+						<div class="projectname">
+							<h4>RPG Game</h4>
+						</div>
 					</div>
-				</div>
+				</a>
 
-				<div class="project trivia">
-					<div class="projectname">
-						<h4>Trivia Game</h4>
+				<a href="#">	
+					<div class="project trivia">
+						<div class="projectname">
+							<h4>Trivia Game</h4>
+						</div>
 					</div>
-				</div>
+				</a>
 
-				<div class="project news">
-					<div class="projectname">
-						<h4>Rutgers Info Widget</h4>
+				<a href="#">	
+					<div class="project news">
+						<div class="projectname">
+							<h4>Rutgers Info Widget</h4>
+						</div>
 					</div>
-				</div>
+				</a>
 
-				<div class="project rock">
-					<div class="projectname">
-						<h4>Rock Paper Scissors</h4>
+				<a href="#">	
+					<div class="project rock">
+						<div class="projectname">
+							<h4>Rock Paper Scissors</h4>
+						</div>
 					</div>
-				</div>
-
-
-
-
-
-
-
-			
-			
+				</a>
+		
 
 			</div> <!--end profile div -->
 		</div> <!-- end pagecontent -->
