--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 				<!--main content-->
 				<div class="profile">
 					<img src="assets/images/dnhart.jpg" />
-					<p>Ut pretium odio sit amet eros iaculis, id cursus ex pretium. Proin eleifend dui orci, sed accumsan augue eleifend vel. In hac habitasse platea dictumst. Vivamus consequat purus nibh, a dictum ante condimentum non. Nullam rhoncus est ac justo volutpat, et iaculis sapien rhoncus. Morbi et convallis eros. In faucibus quis elit ut iaculis. Nullam quis posuere ex, volutpat porta ipsum. </p>
+					<p>I am a full stack developer with a background in engineering, photography, and a lifetime of problem solving. My unique experiences allow me to approach assignments with the precision of a scientist, the creativity of an artist, and the tenacity of a practiced trouble shooter. Fortunately, my problem-solving doggedness doesn't overshadow my easy-going nature and eagerness to both learn and help others. </p>
+
+					<p>When I am not working at the computer or camera, you can find me with my family. A bit of a geek by nature, I play RPG and board games, appreciate the finer points of certain fandoms, and enjoy watching my kids go "totally fan girl" at Comicons. However, I also practice more traditional pursuits of tennis, knitting, calligraphy, and playing my viola in a local orchestra. </p>
+
+					<p>Currently, I am engaged in the University of Texas Coding Boot Camp to learn the skills to become a full stack developer. I will be graduating in April 2017 and would love to find a position that allows me to build on these techniques to solve problems and help others. Want to work together? I'd love to <a href="contact.html">hear from you!</a></p>
 				</div> <!-- end profile div -->
 
 
